# DjangoAIPractice

./: README.md  pyproject.toml
.github/prompts/: initial.prompt.md
Django Project/myproject/: settings.py  urls.py
Django Project/tasks/: models.py  urls.py  views.py
Django Project/tasks/migrations/: 0001_initial.py  0002_task_completed.py
Django Project/tasks/static/tasks/css/: tasks.css
Django Project/tasks/static/tasks/js/: htmx-config.js  task-item.js  task-manager.js
Django Project/tasks/templates/tasks/: index.html
Django Project/tasks/templates/tasks/partials/: task_item.html
