[tool.poetry]
name = "new folder"
version = "0.1.0"
description = ""
authors = ["Rizwan Riaz <iamrizwan077@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "6.0.4"
sqlparse = "0.5.5"
asgiref = "3.11.1"
tzdata = "2026.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
